--- a/group/group.templ
+++ b/group/group.templ
@@ -69,18 +69,14 @@ templ GroupListView(gg view.ViewData[service.RecordSlice]) {
         }
         for _, g := range gg.V() {
             <article>
-                <hgroup>
-                    <h4>
-                        @component.Link(g.GetString("name"), "", templ.Attributes{
-                            "hx-get": view.Reverse(ctx, "group.get", g.GetId()),
-                            "hx-target": "#groups",
-                        })
-                    </h4>
-                    <small><em>{ g.GetString("street") }, { g.GetString("city") }, { g.GetString("country") }</em></small>
-                    <hr />
-                </hgroup>
+                <h3>
+                    @component.Link(g.GetString("name"), "", templ.Attributes{
+                        "hx-get": view.Reverse(ctx, "group.get", g.GetId()),
+                        "hx-target": "#groups",
+                    })
+                </h3>
+                <p><i>{ g.GetString("street") }, { g.GetString("city") }, { g.GetString("country") }</i></p>
                 <p>{ g.GetString("description") }</p>
-
             </article>
         }
         @component.Link("Add a group", "", templ.Attributes{
@@ -100,16 +96,21 @@ templ GroupDetailView(g view.ViewData[service.Record]) {
         <nav>
             <span role="group">
                 <a href="#stats" class="outline" role="button" 
-                    hx-target="#content" hx-get={ view.Reverse(ctx, "stat.list", g.V().GetId())}>Stats</a>
+                    hx-target="#content" hx-get={ view.Reverse(ctx, "stat.list", g.V().GetId())}>
+                    <i class="fa-regular fa-chart-bar"></i> Stats
+                </a>
+                    
                 <a href="#members" class="outline" role="button"
-                    hx-target="#content" hx-get={ view.Reverse(ctx, "member.list", g.V().GetId())}>Members</a>
+                    hx-target="#content" hx-get={ view.Reverse(ctx, "member.list", g.V().GetId())}>
+                    <i class="fa-solid fa-users"></i> Members
+                </a>
                 <a href="#seasons" class="outline" role="button"
-                    hx-target="#content" hx-get={ view.Reverse(ctx, "season.list", g.V().GetId())}>Seasons</a>
+                    hx-target="#content" hx-get={ view.Reverse(ctx, "season.list", g.V().GetId())}>
+                    <i class="fa-solid fa-calendar-days"></i> Seasons
+                </a>
             </span>
         </nav>
     </section>
-    <section id="content">
-        @GroupSeasonList(g.V().GetId(), view.NewViewData(g.V().ExpandedAll("seasons"), nil))
-    </section>
+    <section id="content" hx-trigger="load" hx-get={ view.Reverse(ctx, "stat.list", g.V().GetId())} hx-target="#content"></section>
 }
 
