--- a/pkg/view/base/index.templ
+++ b/pkg/view/base/index.templ
@@ -1,10 +1,10 @@
 package base
 
-templ Head() {
+templ Head(title string) {
 	<head>
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<title>koko</title>
+		<title>{ title }</title>
 		@Styles()
 	</head>
 }
@@ -37,7 +37,7 @@ templ Header() {
 }
 
 templ Scripts() {
-	<script src="https://unpkg.com/htmx.org@1.9.8" integrity="sha384-rgjA7mptc2ETQqXoYC3/zJvkU7K/aP44Y+z7xQuJiVnB/422P/Ak+F/AqFR7E4Wr" crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/htmx.org@2.0.0"></script>
 }
 
 templ Footer() {
@@ -47,15 +47,23 @@ templ Footer() {
 templ Body() {
 	<body>
 		@Header()
-		<main class="container" id="container" hx-trigger="load" hx-get="/group"></main>
+		{children...}
 		@Scripts()
 		@Footer()
 	</body>
 }
 
+templ Main(attr templ.Attributes) {
+	<main class="container" {attr...}>
+		{children...}
+	</main>
+}
+
 templ Index() {
 	<html lang="en">
-	@Head()
-	@Body()
+	@Head("Sportix")
+	@Body() {
+		@Main(templ.Attributes{"id": "container", "hx-trigger": "load", "hx-get": "/group"})
+	}
 	</html>
 }
