fix if component

--- a/pkg/view/component/component.templ
+++ b/pkg/view/component/component.templ
@@ -1,5 +1,11 @@
 package component
 
+templ If(cond bool, comp templ.Component) {
+    if cond {
+        @comp
+    }
+}
+
 templ Link(name, href string, attr templ.Attributes) {
     <a href={ templ.URL(href)} {attr...}>{name}</a>
 }
