--- a/pkg/view/base/index.templ
+++ b/pkg/view/base/index.templ
@@ -1,6 +1,10 @@
 package base
 
-import "github.com/josuebrunel/sportdropin/pkg/xsession"
+import (
+	"github.com/josuebrunel/sportdropin/pkg/view"
+	"github.com/josuebrunel/sportdropin/pkg/view/component"
+	"github.com/josuebrunel/sportdropin/pkg/xsession"
+)
 
 templ Head(title string) {
 	<head>
@@ -19,13 +23,16 @@ templ Styles() {
 
 templ AccountMenu() {
 	if xsession.IsAuthenticated(ctx) {
-		<p>Hello { xsession.GetUser(ctx).Email }</p>
+		<p>
+			Hello 
+			@component.Link(xsession.GetUser(ctx).Email, view.Reverse(ctx, "account.get", xsession.GetUser(ctx).ID), templ.Attributes{})
+		</p>
 	} else {
 		<details class="dropdown">
 			<summary><i class="fa-solid fa-bars"></i> </summary>
 			<ul>
-				<li><a href="/account/login">Sign in</a></li>
-				<li><a href="/account/register">Sign up</a></li>
+				@component.Link("Sign in", view.Reverse(ctx, "account.login"), templ.Attributes{})
+				@component.Link("Sign up", view.Reverse(ctx, "account.register"), templ.Attributes{})
 			</ul>
 		</details>
 	}
