--- a/group/group.templ
+++ b/group/group.templ
@@ -12,56 +12,50 @@ import (
 )
 
 templ GroupFormView(r view.ViewData[service.Record], attr templ.Attributes) {
-	<article>
-		<header>
-			<a
-				href="#close"
-				aria-label="Close"
-				class="close"
-				data-target="group-modal"
-				hx-get="#"
-				hx-target="#group-modal"
-				hx-swap="delete"
-			></a>
-		</header>
-		<form hx-target="#container" { attr... }>
-			@component.InputCSRF(view.Get[string](ctx, "csrf"))
-			<div>
-				@component.InputWithLabel("sport", templ.Attributes{"type": "text", "name": "sport", "value": r.V().GetString("sport"), "required": true})
-				if !r.ErrNil("sport") {
-					@component.Error(r.ErrGet("sport"))
-				}
-			</div>
-			<div>
-				@component.InputWithLabel("name", templ.Attributes{"type": "text", "name": "name", "value": r.V().GetString("name"), "required": true})
-				if !r.ErrNil("name") {
-					@component.Error(r.ErrGet("name"))
-				}
-			</div>
-			<div>
-				@component.TextAreaWithLabel(
-					"description", templ.Attributes{"name": "description", "id": "description", "cols": "30", "rows": "10"}, r.V().GetString("Description"))
-			</div>
-			<div>
-				@component.InputWithLabel("street", templ.Attributes{"type": "text", "name": "street", "value": r.V().GetString("street"), "required": true})
-				if !r.ErrNil("street") {
-					@component.Error(r.ErrGet("street"))
-				}
-			</div>
-			<div class="grid">
-				@component.InputWithLabel("city", templ.Attributes{"type": "text", "name": "city", "value": r.V().GetString("city"), "required": true})
-				if !r.ErrNil("city") {
-					@component.Error(r.ErrGet("city"))
-				}
-				@component.InputWithLabel("country", templ.Attributes{"type": "text", "name": "country", "value": r.V().GetString("country"), "required": true})
-				if !r.ErrNil("country") {
-					@component.Error(r.ErrGet("country"))
-				}
-			</div>
-			@component.ButtonSubmit("Save", templ.Attributes{
-				"value": "save",
-				"class": "primary",
-			})
+	<form { attr... }>
+		if strings.EqualFold(r.V().GetId(),"") {
+			<h5>Add group </h5>
+		} else {
+			<h5>Edit group { r.V().GetString("name") } </h5>
+		}
+		@component.InputCSRF(view.Get[string](ctx, "csrf"))
+		@component.InputHidden("user", xsession.GetUser(ctx).ID)
+		<div>
+			@component.InputWithLabel("sport", templ.Attributes{"type": "text", "name": "sport", "value": r.V().GetString("sport"), "required": true})
+			if !r.ErrNil("sport") {
+				@component.Error(r.ErrGet("sport"))
+			}
+		</div>
+		<div>
+			@component.InputWithLabel("name", templ.Attributes{"type": "text", "name": "name", "value": r.V().GetString("name"), "required": true})
+			if !r.ErrNil("name") {
+				@component.Error(r.ErrGet("name"))
+			}
+		</div>
+		<div>
+			@component.TextAreaWithLabel("description", templ.Attributes{"name": "description", "id": "description", "cols": "30", "rows": "10"}, r.V().GetString("description"))
+		</div>
+		<div>
+			@component.InputWithLabel("street", templ.Attributes{"type": "text", "name": "street", "value": r.V().GetString("street"), "required": true})
+			if !r.ErrNil("street") {
+				@component.Error(r.ErrGet("street"))
+			}
+		</div>
+		<div class="grid">
+			@component.InputWithLabel("city", templ.Attributes{"type": "text", "name": "city", "value": r.V().GetString("city"), "required": true})
+			if !r.ErrNil("city") {
+				@component.Error(r.ErrGet("city"))
+			}
+			@component.InputWithLabel("country", templ.Attributes{"type": "text", "name": "country", "value": r.V().GetString("country"), "required": true})
+			if !r.ErrNil("country") {
+				@component.Error(r.ErrGet("country"))
+			}
+		</div>
+		@component.ButtonSubmit("Save", templ.Attributes{
+			"value": "save",
+			"class": "primary",
+		})
+		if !strings.EqualFold(r.V().GetId(), "") {
 			@component.ButtonSubmit("Delete", templ.Attributes{
 				"value":      "delete",
 				"class":      "secondary",
@@ -69,8 +63,8 @@ templ GroupFormView(r view.ViewData[service.Record], attr templ.Attributes) {
 				"hx-confirm": "Do you really want to delete this group?",
 				"hx-headers": fmt.Sprintf(`{"csrf": "%s"}`, view.Get[string](ctx, "csrf")),
 			})
-		</form>
-	</article>
+		}
+	</form>
 }
 
 templ GroupListView(gg view.ViewData[service.RecordSlice]) {
@@ -84,12 +78,12 @@ templ GroupListView(gg view.ViewData[service.RecordSlice]) {
 					@component.Link(g.GetString("name"), view.Reverse(ctx, "group.get", g.GetId()), templ.Attributes{})
 				</h3>
 				<p><i>{ g.GetString("street") }, { g.GetString("city") }, { g.GetString("country") }</i></p>
-				<p>{ g.GetString("description") }</p>
+				<p><pre style="background-color:white;">{ g.GetString("description") }</pre></p>
 			</article>
 		}
 		@component.Link("Add a group", "", templ.Attributes{
 			"hx-get":    view.Reverse(ctx, "group.create"),
-			"hx-target": "#container",
+			"hx-target": "#content",
 			"role":      "button",
 		})
 	</div>
@@ -101,7 +95,7 @@ templ GroupDetailView(g models.Group) {
 		@base.Main(templ.Attributes{}) {
 			<section>
 				<h2>{ g.Name }</h2>
-				<p>{ g.Description }</p>
+				<p><pre style="background-color:white;">{ g.Description }</pre></p>
 			</section>
 			<section>
 				<nav>
